2003-02-18  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (calc_word_width): use cached items and call shape
	just once

	* htmltextslave.c (get_items): use html_text_get_items
	(draw_highlighted): use cached items and glyphs

	* htmlengine.c (parse_i): don't pass possibly uninitialized memory
	to tokenizer

2003-02-07  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (draw_quotes): move the plain painter check out
	of the loop.

2003-02-05  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_f): no pending para for forms.

	* htmlclueflow.c: use new painter methods that cache the indent
	widths.
	
	* htmlfontmanager.h: add cache for indent memebers.

	* htmlfontmanger.c: add cache members to html_font_new.

	* htmlpainter.h: add accessors for indent caches.

	* htmlpainter.c: add accessors for indent caches.

	* htmlgdkpainter.c: calc widths of block indents.

	* htmlprinter.c: calc widths of block indents.
	
2003-02-04  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (get_indent): cache the indent level since this
	gets called a lot.

	* htmlclueflow.h: add indent_width member.

2003-01-29  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cursor.c (html_engine_draw_cursor_in_area):
	updated for changed coordinates

2003-01-28  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-properties.c (gtk_html_class_properties_new): get
	default print font faces from style

	* htmlprinter.c (alloc_font): remove workaround for old gimp print

2003-01-22  Radek Doulik  <rodo@ximian.com>

	* testgtkhtml.c (print_preview_cb): close print job before
	creating preview

2003-01-21  Larry Ewing  <lewing@ximian.com>

	* htmltextslave.c (hts_fit_line): make sure we never call strchr
	on a NULL string.  This tends to happen if two consecutive spaces
	enter the token stream.

2003-01-18  Larry Ewing  <lewing@ximian.com>

	* htmlselect.c (html_select_set_text): make sure we have a longest
	string.

2003-01-17  Larry Ewing  <lewing@ximian.com>
